--- a/assets/88st-theme.css
+++ b/assets/88st-theme.css
@@ -207,7 +207,8 @@ textarea, .bundle-ta, .share-ta, .promo-ta{
 #_88stThemeToggle{
   position:fixed;
   right:14px;
-  top:calc(12px + env(safe-area-inset-top, 0px) + var(--_88stToggleTopExtra, 0px));
+  top:auto;
+  bottom:calc(14px + env(safe-area-inset-bottom, 0px) + var(--_88stToggleBottomExtra, 0px));
   z-index:99999;
   display:flex;
   align-items:center;
